feat: add pool deploy worker
